# HCR

./: .gitignore  .gitmodules  README.md  run
ROSFace/: mainpage.dox  manifest.xml
ROSFace/src/: ROSFace.py
charles/: mainpage.dox  manifest.xml
controlnode/: CMakeLists.txt  mainpage.dox  manifest.xml
controlnode/msg/: startstop.msg
controlnode/src/: controlnode.cpp
facenode/: face_node.py
kinect_follower/: CMakeLists.txt  mainpage.dox  manifest.xml
kinect_follower/launch/: kinect_follower.launch
kinect_follower/script/: obstacle_map.py  robot_profile.py  shared_control.py  sonar_to_pointcloud.py
kinect_follower/src/: .cproject  .project
kinect_follower/src/kinect_follower/: Main.cpp
kinect_follower/src/tf_broadcaster/: Main.cpp
messages/: mainpage.dox  manifest.xml
messages/msg/: activityStatus.msg  faceRequests.msg
printListener/: CMakeLists.txt  mainpage.dox  manifest.xml
printListener/src/: printListener.cpp
printerListenerPy/: README.md  mainpage.dox  manifest.xml
printerListenerPy/src/: client.py  server.py
voice_recog/: note.md  test.txt
voice_recog/Example Conversation/: Generic.txt  Name list.txt  No.txt  Yes.txt  dictionary.txt  full_corpus.txt  hello grammar.txt  locations.txt  names.txt  names.xlsx  negative.txt  other.txt
voice_recog/src/flite_test/: mainpage.dox  manifest.xml
voice_recog/src/flite_test/src/: text.py
voice_recog/src/knowledge_base/: 8835.sent  complete.dic  complete.lm  names.lm  names.txt  no.dic  no.lm  test3.dic  test3.lm  yes.dic  yes.lm  yesno.dic  yesno.lm
voice_recog/src/knowledge_base/full_dict/: 0600.dic  0600.lm  0600.log_pronounce  0600.sent  8841.dic  (+5 more)
voice_recog/src/rharmony/: rosdep.yaml
voice_recog/src/ros_flite/: CMakeLists.txt  mainpage.dox  manifest.xml
voice_recog/src/ros_flite/src/: ros_flite.cpp
voice_recog/src/ros_speech_engine/: CMakeLists.txt  mainpage.dox  manifest.xml
voice_recog/test/: continuous-0.6.c
(+51 files in other folders)
